Log schema 변경에 따른 코드 수정
