# api.swagger.yaml
@@ -66,6 +66,28 @@ paths:
       summary: Get recent logs
       description: Get recent log arrays (default 3)
       operationId: getRecentLogs
+      parameters:
+        - in: query
+          name: domain
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: task
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: taskType
+          required: true
+          schema:
+            type: string
+        - in: query
+          name: number
+          required: false
+          schema:
+            type: number
+            defualt: 3
       responses:
         '200':
           description:
@@ -78,7 +100,9 @@ paths:
                   value:
                     code: 200
                     payload:
-
+                      message: null
+                      data:
+                        logs:
   
   /log/query:
     get:
