# src/domains/domain.b/domain.b.controller.ts
@@ -1,0 +1,4 @@
+import { Controller } from '@nestjs/common';
+
+@Controller('domain/b')
+export class DomainBController {}
