# src/domains/domain.d/domain.controller.ts
@@ -1,0 +1,4 @@
+import { Controller } from '@nestjs/common';
+
+@Controller('domain/d')
+export class DomainDController {}
